[gd_scene load_steps=13 format=3 uid="uid://boa5actufjfxd"]

[ext_resource type="Script" uid="uid://sh1ci7fjveo3" path="res://scripts/menu_inicial.gd" id="1_1lqws"]
[ext_resource type="Texture2D" uid="uid://cpckp7vy85qem" path="res://assets/original/menu.png" id="1_40mju"]
[ext_resource type="Script" uid="uid://bfhtx6i4jiq5q" path="res://resources/visual_effects/fade_out_component.gd" id="2_bqqt6"]
[ext_resource type="AudioStream" uid="uid://dxi1sygxetyv4" path="res://assets/original/sounds/button1.ogg" id="4_wu84c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8ln24"]
atlas = ExtResource("1_40mju")
region = Rect2(0, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lqws"]
atlas = ExtResource("1_40mju")
region = Rect2(1280, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_40mju"]
atlas = ExtResource("1_40mju")
region = Rect2(2723, 902, 243, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg8ak"]
atlas = ExtResource("1_40mju")
region = Rect2(3213.36, 900.012, 244.263, 138.04)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn1uv"]
atlas = ExtResource("1_40mju")
region = Rect2(2968.6, 901.459, 243.853, 136.038)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekxnf"]
atlas = ExtResource("1_40mju")
region = Rect2(2918.45, 1231.27, 179.091, 202.727)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqqt6"]
atlas = ExtResource("1_40mju")
region = Rect2(3278.3, 1231.91, 178.813, 207.363)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu84c"]
atlas = ExtResource("1_40mju")
region = Rect2(3098.87, 1228.8, 178.512, 203.306)

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_1lqws")

[node name="FadeOutComponent" type="Node" parent="."]
script = ExtResource("2_bqqt6")
duration = 1.0
duration_to_wait_after_fade = 0.5
metadata/_custom_type_script = "uid://bfhtx6i4jiq5q"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sky" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("AtlasTexture_8ln24")

[node name="BackGround" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = SubResource("AtlasTexture_1lqws")

[node name="NewGameButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 826.0
offset_top = 94.0
offset_right = 1122.0
offset_bottom = 227.0
texture_normal = SubResource("AtlasTexture_40mju")
texture_pressed = SubResource("AtlasTexture_eg8ak")
texture_hover = SubResource("AtlasTexture_nn1uv")

[node name="LeaveGameButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 905.0
offset_top = 475.0
offset_right = 1084.0
offset_bottom = 677.0
texture_normal = SubResource("AtlasTexture_ekxnf")
texture_pressed = SubResource("AtlasTexture_bqqt6")
texture_hover = SubResource("AtlasTexture_wu84c")

[node name="SoundEffects" type="Node" parent="."]

[node name="ButtonPressedAudioPlayer" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource("4_wu84c")

[connection signal="pressed" from="Control/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Control/LeaveGameButton" to="." method="_on_leave_game_button_pressed"]
